# diorama

./: CMakeLists.txt  INSTALL  README.md
cmake/: FindPackages.cmake
cmake/Snippets/: BuildConfig.cmake  DFindBoost.cmake  DFindEigen.cmake  DFindGluGlut.cmake  DFindOpenGL.cmake  DFindOpenMP.cmake  DFindQt.cmake
src/main/: CMakeLists.txt  main.cpp
